# vectorpp

./: CMakeLists.txt  CMakePresets.json
cmake/: utils.cmake  vectorpp-config.cmake.in
examples/add/: CMakeLists.txt  main.cpp
include/vectorpp/: export.h  export_static.h  vectorpp.h
src/: vectorpp.cpp
tests/: CMakeLists.txt  add_test.cpp
